[package]
name = "campy"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/campy/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
ecies = "0.2.6"
hex = "0.4.3"
ring = "0.17.8"